# Emulator8086

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
assets/: AUTOEXEC.BAT  CONFIG.SYS
assets/rom/: bda.inc  bios.asm  int08_timer.inc  int09_kbd.inc  int10_video.inc  int13_disk.inc  int16_kbd.inc  int19_boot.inc  int1a_time.inc  utils.inc
assets/rom/tests/: keyboard.asm
src/: bios_inspection_tests.rs  cpu_tests.rs  main.rs
src/a_out/: cpuid.rs  error.rs  executable.rs  flags.rs  header.rs  instructions.rs  mod.rs
src/bios/: bda.rs  disk.rs  handlers.rs  init.rs  keyboard.rs  mod.rs  system.rs  tests.rs  timer.rs  video.rs
src/io/: bus.rs  console.rs  disk.rs  dma.rs  fdc.rs  font_cp437.rs  hdc.rs  keyboard.rs  keyboard_winit.rs  mod.rs  pic.rs  pit.rs  port61.rs  renderer_wgpu.rs  vga.rs
src/minix2/: interruption.rs  mod.rs  syscall.rs
src/utils/: number.rs
src/vm/: cli.rs  cpu.rs  disassembler.rs  headless.rs  instructions.rs  memory.rs  mod.rs  modrm.rs  registers.rs  runtime.rs  runtime_gui.rs
src/vm/instructions/: alu.rs  control.rs  mod.rs  shift.rs  string.rs  tests.rs
