[package]
name = "emulator_8086"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.58"
clap_derive = "4.5.55"
byteorder = "1.5.0"
log = "0.4.29"
env_logger = "0.11.9"
num-derive = "0.4.2"
num-traits = "0.2.19"
crossterm = "0.29.0"
fatfs = "0.3"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"